--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "license": "npm-license-crawler --dependencies --production --onlyDirectDependencies --json ./src/license.json"
   },
   "dependencies": {
     "@rmwc/ripple": "^7.0.3",
@@ -16,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-crop": "^9.1.1",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.2",
@@ -26,6 +28,7 @@
     "@types/pica": "^9.0.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^1.0.7",
     "sass": "^1.49.8",
     "typescript": "^4.5.4",
