--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm-license-crawler --dependencies --production --onlyDirectDependencies --json ./src/license.json && tsc && vite build",
     "preview": "vite preview",
     "license": "npm-license-crawler --dependencies --production --onlyDirectDependencies --json ./src/license.json"
   },
