未使用のライブラリの記載の削除や微調整

--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
   },
   "dependencies": {
     "@rmwc/ripple": "^7.0.3",
-    "@rmwc/tooltip": "^7.0.3",
     "cjp": "^1.2.3",
     "compressorjs": "^1.1.1",
-    "pica": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-image-crop": "^9.1.1",
     "react-images-viewer": "^1.7.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.2",
-    "recoil": "^0.6.1",
-    "use-file-picker": "^1.4.1"
+    "recoil": "^0.6.1"
   },
   "devDependencies": {
     "@types/pica": "^9.0.0",
